# tutor-xqueue

./: .gitlab-ci.yml  .hatch_build.py  CHANGELOG.md  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py
.github/workflows/: sync.yml  test.yml
changelog.d/: 20230731_080653_jhony.avella_remove_permissions_container.md  20231113_135404_r.khetani.md  20241022_115239_jhony.avella_ubuntu_24_04.md  20250213_202807_jhony.avella_pyproject_toml.md  20250404_115245_jhony.avella_teak.md  scriv.ini
tutorxqueue/: __about__.py  plugin.py
tutorxqueue/patches/: caddyfile  https-create  k8s-deployments  k8s-ingress-rules  k8s-ingress-tls-hosts  k8s-jobs  k8s-services  kustomization-configmapgenerator  local-docker-compose-dev-services  local-docker-compose-jobs-services  local-docker-compose-permissions-command  local-docker-compose-permissions-volumes  local-docker-compose-services  nginx-extra  openedx-common-settings
tutorxqueue/templates/xqueue/apps/settings/: tutor.py
tutorxqueue/templates/xqueue/hooks/mysql/: init
tutorxqueue/templates/xqueue/hooks/xqueue/: init
